--- a/tagChatFront/package.json
+++ b/tagChatFront/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-select/ng-select": "^11.1.1",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.2",
